Replaced old site with new site file. Added images and personal projects section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Nathaniel Green | Junior Web Developer</title>
+  <title>Nathaniel Green | Web Developer</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -14,216 +14,62 @@
   rel="stylesheet">
 </head>
 <body>
-
-  <div id="intro">
-    <h1 id="intro-title">Nathaniel <span class="green-words"> Green </span></h1>
-    <p id="intro-info"> Web Developer based in London, UK. </p>
+  <!-- Header -->
+  <div id="header">
+    <div>
+      <h1>Nathaniel Green</h1>
+      <hr></hr>
+      <h3>Web Developer based in London, UK.</h3>
+    </div>
   </div>
+  <!-- Header End -->
 
   <div class="banner">
-    <h1>About</h1>
+    <h1>WORK PORTFOLIO</h1>
   </div>
 
-  <div id="about">
-    <p>Hi, I'm Nathaniel Green, a freelance web developer based in London,
-    UK.</p>
-    <p>Below you will find some of the previous work I have done, as well as
-    some personal open-source projects of mine, and my contact details.</p>
-    <hr></hr>
-    <p>I am available to hire for short term projects, as well as being able to
-    build small, lightweight websites/apps for business or personal use. I
-    can also provide custom graphics and logos, along with the set up of custom
-    domains and email addresses.</p>
-    <p>My hourly rate is currently £12/hr, however this may be flexible depending 
-    on client budget and project size.</p>
-    <p>If you'd like to get in touch and discuss a potential project you would
-    like building, email me at
-    <a href="mailto:work@ngreen.co">work@ngreen.co</a>.</p>
-
+  <!-- Portfolio -->
+  <div id="portfolio">
+    <div class="project">
+      <div class="project-background" id="showstar"></div>
+      <div class="project-banner">
+        <h5>SHOWSTAR ENTERTAINMENTS</h5>
+      </div> 
+    </div>
+    <div class="project">
+      <div class="project-background" id="brooklyn"></div>
+      <div class="project-banner">
+        <h5>THE BROOKLYN BAR</h5>
+      </div>
+    </div>
   </div>
+  <!-- Portfolio End -->
 
   <div class="banner">
-    <h1>Work Portfolio</h1>
+    <h1>PERSONAL PROJECTS</h1>
   </div>
 
-  <!-- Showstar -->
-  <div id="showstar" class="project">
-    <div id="showstar-title" class="project-title">
-      <h1>Show<span class="green-words">Star</span> Entertainments</h1>
+  <!-- Personal Projects -->
+  <div id="projects">
+    <div class="project">
+      <div class="project-background" id="ushare"></div>
+      <div class="project-banner">
+        <h5>USHARE</h5>
+      </div>
     </div>
-
-    <div class="project-content">
-
-      <div class="project-about">
-        <p>A website built for the company 'ShowStar Entertainments'.</p>
-        <p>The website's main function is to showcase various clubs and events owned
-        by ShowStar Entertainments as well as provide information and news on
-        upcoming events and/or changes.</p>
-        <p>The website was built in close consultation with the client and has 
-        been built to very specific design requests.</p>
+    <div class="project">
+      <div class="project-background" id="remoteme"></div>
+      <div class="project-banner">
+        <h5>REMOTEME</h5>
       </div>
-
-      <div class="project-buttons">
-          <a href="http://www.showstarents.co.uk">
-            <button class="button">View Live Website</button>
-          </a>
-          <a href="http://github.com/nathanielgreen/showstar">
-            <button class="button">View Code</button>
-          </a>
+    </div>
+    <div class="project">
+      <div class="project-background" id="bulletjournal"></div>
+      <div class="project-banner">
+        <h5>BULLET JOURNAL</h5>
       </div>
-
     </div>
   </div>
-  <!-- Showstar End -->
-
-  <!-- Brooklyn -->
-  <div id="brooklyn" class="project">
-    <div id="brooklyn-title" class="project-title">
-      <h1>The <span class="green-words">Brooklyn</span> Bar</h1>
-    </div>
-
-    <div class="project-content" class="fadein">
-
-      <div id="brooklyn-about" class="project-about">
-        <p> A website built for 'The Brooklyn Bar' located in Loughborough. </p>
-        <p> The website functions as a platform for 'The Brooklyn Bar' to take
-        and manage bookings of the venue, as well as post updates and provide
-        customers with information about the bar. </p>
-        <p> Built for a friend's colleague using Wordpress, along with setup of the
-        domain and hosting packages and email accounts.  
-      </div>
-
-      <div class="project-buttons">
-        <a href="http://thebrooklynbar.co.uk">
-          <button class="button">View Live Website</button>
-        </a>
-      </div>
-      
-    </div>
-  </div>
-  <!-- Brooklyn End -->
-
-  <div class="banner">
-    <h1>Personal Projects</h1>
-  </div>
-  
-  <!-- Ushare -->
-  <div id="ushare" class="project">
-    <div id="ushare-title" class="project-title">
-      <h1><span class="green-words">U</span>share</h1>
-    </div>
-
-    <div class="project-content">
-
-      <div class="project-about">
-        <p> Ushare is an Android & iOS app that matches users based on their
-        current geolocation and their destination, to find others around
-        them whom they can share an Uber Cab with. </p>
-        <p> This functionality provides users with a way to split the 
-        fare of an Uber Cab with other users when their friends or colleagues
-        may not be available. </p> 
-        <p>The process of using Ushare is fast and simple, providing people a
-        quick and easy way to reduce the cost of their travel. </p>
-      </div>
-
-      <div class="project-buttons">
-        <a href="http://github.com/nathanielgreen/ushare">
-          <button class="button">View Code</button>
-        </a>
-      </div>
-
-    </div>
-  </div>
-  <!-- Ushare End -->
-  
-  
-  <!-- RemoteMe -->
-  <div id="remoteme" class="project">
-    <h4>(Work in Progress)</h4>
-    <div id="remoteme-title" class="project-title">
-      <h1>Remote<span class="green-words">Me</span></h1>
-    </div>
-
-
-    <div class="project-content">
-
-      <div class="project-about">
-        <p> Remote Me, is a web app that allows users to
-        find, list, and rate areas in their city that are laptop-work friendly
-        areas (such as cafes, bars & hotels). </p>
-        <p> All locations are listed on the interactive map. </p>
-      </div>
-
-      <div class="project-buttons">
-        <a href="http://github.com/nathanielgreen/remoteme">
-          <button class="button">View Code</button>
-        </a>
-      </div>
-
-    </div>
-  </div>
-  <!-- RemoteMe End -->
-  
-  
-  <!-- Chromeboks -->
-  <div id="chromebooks" class="project">
-    <div id="chromebooks-title" class="project-title">
-      <h1>Chromebooks & <span class="green-words">Linux Guide</span></h1>
-    </div>
-
-    <div class="project-content" class="fadein">
-        
-      <div class="project-about">
-        <p>A how-to guide on how to get started using Chromebooks for web
-        development</p>
-        <p>The guide is primarily built for Makers Academy students after
-        their 12 weeks of using macOS for development and how they can make the
-        change over to Linux on Chromebooks for their future web development
-        needs.</p>
-        <p>The guide also goes into futher details on Linux for beginners such
-        as providing information on distributions, desktop environments, and
-        window managers.</p>
-
-      </div>
-
-      <div class="project-buttons">
-        <a href="https://github.com/nathanielgreen/chromebooks_and_linux">
-          <button class="button">View Guide</button>
-        </a>
-      </div>
-
-    </div>
-  </div>
-  <!-- Chromebooks End -->
-
-  <div class="banner">
-    <h1>Contact</h1>
-  </div>
-
-  <!-- Contact -->
-  <div id="contact">
-    <div id="contact-left">
-      <h2 class="contact-header">Social</h2>
-      <p><a class="contact-link" 
-        href="mailto:n@ngreen.co">Email</a></p>
-      <p><a class="contact-link"
-          href="https://twitter.com/ngreen2303">Twitter</a></p>
-      <p><a class="contact-link"
-          href="https://medium.com/@nathanielgreen">Blog</a></p>
-    </div>
-    <div id="contact-right">
-      <h2 class="contact-header">Business</h2>
-        <p><a class="contact-link"
-          href="https://github.com/nathanielgreen">Github</a></p>
-        <p><a class="contact-link"
-          href="https://github.com/nathanielgreen/CV">CV</a></p>
-        <p><a class="contact-link"
-          href="https://www.linkedin.com/in/nathaniel-green-727263107">
-          LinkedIn</a></p>
-    </div>
-  </div>
-  <!-- Contact End -->
-
-  <script src="scripts.js"></script>
+  <!-- Personal Projects End -->
 </body>
 </html>
