--- a/index.html
+++ b/index.html
@@ -59,18 +59,48 @@
 
   <!-- Portfolio -->
   <div id="portfolio" class="fadein">
+    <!-- Showstar -->
     <div class="project">
-      <div class="project-background" id="showstar"></div>
-      <div class="project-banner">
-        <h5>SHOWSTAR ENTERTAINMENTS</h5>
-      </div> 
+      <label for="showstar-toggle">
+        <input class="toggle" id="showstar-toggle" type="checkbox"></input>
+        <div class="project-background" id="showstar"></div>
+        <div class="project-expand">
+          <section>
+            <h2>SHOWSTAR ENTERTAINMENTS</h2>
+            <p>A website built for the company 'ShowStar Entertainments'.</p>
+            <p>The website's main function is to showcase various clubs and
+            events owned by ShowStar Entertainments as well as provide
+            information and news on upcoming events and/or changes.</p>
+            <p> The website was built in close consultation with the client and 
+            has been built to very specific design requests.</p>
+            <a href="http://showstarents.co.uk">
+              View Live Website
+            </a>
+            <a href="https://github.com/nathanielgreen/showstar">
+              View Code
+            </a>
+          </section>
+        </div>
+        <div class="project-banner">
+          <h5>SHOWSTAR ENTERTAINMENTS</h5>
+        </div> 
+      </label>
     </div>
+    <!-- Brooklyn -->
     <div class="project">
+      <label for="brooklyn-toggle">
+        <input class="toggle" id="brooklyn-toggle" type="checkbox"></input>
       <div class="project-background" id="brooklyn"></div>
+        <div class="project-expand">
+          <section>
+            <p>test</p>
+          </section>
+        </div>
       <div class="project-banner">
         <h5>THE BROOKLYN BAR</h5>
       </div>
     </div>
+    </label>
   </div>
   <!-- Portfolio End -->
 
