--- a/index.html
+++ b/index.html
@@ -66,19 +66,29 @@
         <div class="project-background" id="showstar"></div>
         <div class="project-expand">
           <section>
-            <h2>SHOWSTAR ENTERTAINMENTS</h2>
-            <p>A website built for the company 'ShowStar Entertainments'.</p>
-            <p>The website's main function is to showcase various clubs and
-            events owned by ShowStar Entertainments as well as provide
-            information and news on upcoming events and/or changes.</p>
-            <p> The website was built in close consultation with the client and 
-            has been built to very specific design requests.</p>
-            <a href="http://showstarents.co.uk">
-              View Live Website
-            </a>
-            <a href="https://github.com/nathanielgreen/showstar">
-              View Code
-            </a>
+            <div style="flex:0.8">
+              <h2>SHOWSTAR ENTERTAINMENTS</h2>
+            </div>
+            <div style="flex:0.8">
+              <p>A website built for the company 'ShowStar Entertainments'.</p>
+            </div>
+            <div style="flex:1.5">
+              <p>The website's main function is to showcase various clubs and
+              events owned by ShowStar Entertainments as well as provide
+              information and news on upcoming events and/or changes.</p>
+            </div>
+            <div style="flex:1">
+              <p> The website was built in close consultation with the client and 
+              has been built to very specific design requests.</p>
+            </div>
+            <div style="flex:1">
+              <a href="http://showstarents.co.uk">
+                View Live Website
+              </a>
+              <a href="https://github.com/nathanielgreen/showstar">
+                View Code
+              </a>
+            </div>
           </section>
         </div>
         <div class="project-banner">
@@ -86,6 +96,7 @@
         </div> 
       </label>
     </div>
+    <!-- Showstar End -->
     <!-- Brooklyn -->
     <div class="project">
       <label for="brooklyn-toggle">
@@ -93,14 +104,35 @@
       <div class="project-background" id="brooklyn"></div>
         <div class="project-expand">
           <section>
-            <p>test</p>
+            <div style="flex:0.8">
+              <h2>THE BROOKLYN BAR</h2>
+            </div>
+            <div style="flex:0.6">
+              <p>A website built for 'The Brooklyn Bar' located in
+              Loughborough.</p>
+            </div>
+            <div style="flex:1.3">
+              <p>The website functions as a platform for 'The Brooklyn Bar' to 
+              take and manage bookings of the venue, as well as post 
+              updates and provide customers with information about the bar.</p>
+            </div>
+            <div style="flex:1">
+              <p>Built for a friend's colleague using Wordpress, along with 
+              setup of the domain and hosting packages and email accounts.</p>
+            </div>
+            <div style="flex:1">
+              <a href="http://thebrooklynbar.co.uk">
+                View Live Website
+              </a>
+            </div>
           </section>
         </div>
       <div class="project-banner">
         <h5>THE BROOKLYN BAR</h5>
       </div>
+      </label>
     </div>
-    </label>
+    <!-- Brooklyn End -->
   </div>
   <!-- Portfolio End -->
 
