Added ushare section. Styling in progress

--- a/index.html
+++ b/index.html
@@ -101,35 +101,35 @@
     <div class="project">
       <label for="brooklyn-toggle">
         <input class="toggle" id="brooklyn-toggle" type="checkbox"></input>
-      <div class="project-background" id="brooklyn"></div>
-        <div class="project-expand">
-          <section>
-            <div style="flex:0.8">
-              <h2>THE BROOKLYN BAR</h2>
-            </div>
-            <div style="flex:0.6">
-              <p>A website built for 'The Brooklyn Bar' located in
-              Loughborough.</p>
-            </div>
-            <div style="flex:1.3">
-              <p>The website functions as a platform for 'The Brooklyn Bar' to 
-              take and manage bookings of the venue, as well as post 
-              updates and provide customers with information about the bar.</p>
-            </div>
-            <div style="flex:1">
-              <p>Built for a friend's colleague using Wordpress, along with 
-              setup of the domain and hosting packages and email accounts.</p>
-            </div>
-            <div style="flex:1">
-              <a href="http://thebrooklynbar.co.uk">
-                View Live Website
-              </a>
-            </div>
-          </section>
+        <div class="project-background" id="brooklyn"></div>
+          <div class="project-expand">
+            <section>
+              <div style="flex:0.8">
+                <h2>THE BROOKLYN BAR</h2>
+              </div>
+              <div style="flex:0.6">
+                <p>A website built for 'The Brooklyn Bar' located in
+                Loughborough.</p>
+              </div>
+              <div style="flex:1.3">
+                <p>The website functions as a platform for 'The Brooklyn Bar' to 
+                take and manage bookings of the venue, as well as post 
+                updates and provide customers with information about the bar.</p>
+              </div>
+              <div style="flex:1">
+                <p>Built for a friend's colleague using Wordpress, along with 
+                setup of the domain and hosting packages and email accounts.</p>
+              </div>
+              <div style="flex:1">
+                <a href="http://thebrooklynbar.co.uk">
+                  View Live Website
+                </a>
+              </div>
+            </section>
+          </div>
+        <div class="project-banner">
+          <h5>THE BROOKLYN BAR</h5>
         </div>
-      <div class="project-banner">
-        <h5>THE BROOKLYN BAR</h5>
-      </div>
       </label>
     </div>
     <!-- Brooklyn End -->
@@ -142,24 +142,54 @@
 
   <!-- Personal Projects -->
   <div id="projects" class="fadein">
+    <!-- Ushare -->
     <div class="project">
-      <div class="project-background" id="ushare"></div>
-      <div class="project-banner">
-        <h5>USHARE</h5>
-      </div>
+      <label for="ushare-toggle">
+        <input class="toggle" id="ushare-toggle" type="checkbox"></input>
+        <div class="project-background" id="ushare"></div>
+        <div class="project-expand">
+          <section>
+            <div>
+              <h2>USHARE</h2>
+            </div>
+            <div>
+              <p>Ushare is an Android & iOS app that matches users based on their
+              current geolocation and their destination, to find others around them
+              whom they can share an Uber Cab with.</p>
+            </div>
+            <div>
+              <p>This functionality provides users with a way to split the fare 
+              of an Uber Cab with other users when their friends or colleagues 
+              may not be available.</p>
+            </div>
+            <div>
+              <p>The process of using Ushare is fast and simple, providing people a
+              quick and easy way to reduce the cost of their travel.</p>
+            </div>
+          </section>
+        </div>
+        <div class="project-banner">
+          <h5>USHARE</h5>
+        </div>
+      </label>
     </div>
+    <!-- Ushare End -->
+    <!-- RemoteMe -->
     <div class="project">
       <div class="project-background" id="remoteme"></div>
       <div class="project-banner">
         <h5>REMOTEME</h5>
       </div>
     </div>
+    <!-- RemoteMe End -->
+    <!-- BulletJournal -->
     <div class="project">
       <div class="project-background" id="bulletjournal"></div>
       <div class="project-banner">
         <h5>BULLET JOURNAL</h5>
       </div>
     </div>
+    <!-- BulletJournal End -->
   </div>
   <!-- Personal Projects End -->
   
