Added contact section along with its mobile CSS

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <!-- Google Fonts -->
-  <link 
-    href="https://fonts.googleapis.com/css?family=Muli|Open+Sans|Raleway" 
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis|Noto+Sans|Raleway"
+        rel="stylesheet"> 
   
   <!-- jQuery -->
   <script
@@ -149,20 +148,20 @@
         <div class="project-background" id="ushare"></div>
         <div class="project-expand">
           <section>
-            <div>
+            <div style="flex:5">
               <h2>USHARE</h2>
             </div>
-            <div>
+            <div style="flex:1">
               <p>Ushare is an Android & iOS app that matches users based on their
               current geolocation and their destination, to find others around them
               whom they can share an Uber Cab with.</p>
             </div>
-            <div>
+            <div style="flex:1">
               <p>This functionality provides users with a way to split the fare 
               of an Uber Cab with other users when their friends or colleagues 
               may not be available.</p>
             </div>
-            <div>
+            <div style="flex:10">
               <p>The process of using Ushare is fast and simple, providing people a
               quick and easy way to reduce the cost of their travel.</p>
             </div>
@@ -196,6 +195,25 @@
   <div class="banner">
     <h1>CONTACT</h1>
   </div>
+
+  <!-- Contact -->
+  <div id="contact" class="fadein">
+    <a class="contact-link"
+      href="mailto:n@ngreen.co">Email</a>
+    <a class="contact-link"
+      href="mailto:work@ngreen.co">Business Enquiries</a>
+    <a class="contact-link"
+      href="https://github.com/nathanielgreen/">Github</a>
+    <a class="contact-link"
+      href="https://github.com/nathanielgreen/CV/">CV</a>
+    <a class="contact-link"
+      href="https://www.linkedin.com/in/nathaniel-green-727263107">LinkedIn</a>
+    <a class="contact-link"
+      href="https://twitter.com/ngreen2303">Twitter</a>
+    <a class="contact-link"
+      href="https://medium.com/@nathanielgreen">Blog</a>
+  </div>
+  <!-- Contact End -->
 
 
   <!-- Scripts -->
