Added RemoteMe Section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="project-background" id="ushare"></div>
         <div class="project-expand">
           <section>
-            <div style="flex:5">
+            <div style="flex:0.8">
               <h2>USHARE</h2>
             </div>
             <div style="flex:1">
@@ -175,10 +175,33 @@
     <!-- Ushare End -->
     <!-- RemoteMe -->
     <div class="project">
-      <div class="project-background" id="remoteme"></div>
-      <div class="project-banner">
-        <h5>REMOTEME</h5>
-      </div>
+      <label for="remoteme-toggle">
+        <input class="toggle" id="remoteme-toggle" type="checkbox"></input>
+        <div class="project-background" id="remoteme"></div>
+        <div class="project-expand">
+          <section>
+            <div style="flex:0.8">
+              <h2>REMOTE ME</h2>
+            </div>
+            <div style="flex:1">
+              <p>Remote Me, is a web app that allows users to find, list, 
+              and rate areas in their city that are laptop-work friendly 
+              areas (such as cafes, bars & hotels).</p>
+            </div>
+            <div style="flex:0.5">
+              <p>All locations are listed on the interactive map.</p>
+            </div>
+            <div style="flex:0.5">
+              <a href="https://github.com/nathanielgreen/remoteme">
+                View Code
+              </a>
+            </div>
+          </section>
+        </div>
+        <div class="project-banner">
+          <h5>REMOTE ME</h5>
+        </div>
+      </label>
     </div>
     <!-- RemoteMe End -->
     <!-- BulletJournal -->
