Added Bullet Journal Section

--- a/index.html
+++ b/index.html
@@ -206,10 +206,36 @@
     <!-- RemoteMe End -->
     <!-- BulletJournal -->
     <div class="project">
-      <div class="project-background" id="bulletjournal"></div>
-      <div class="project-banner">
-        <h5>BULLET JOURNAL</h5>
-      </div>
+      <label for="bulletjournal-toggle">
+        <input class="toggle" id="bulletjournal-toggle" type="checkbox"></input>
+        <div class="project-background" id="bulletjournal"></div>
+        <div class="project-expand">
+          <section>
+            <div style="flex:0.5">
+              <h2>BULLET JOURNAL</h2>
+            </div>
+            <div style="flex:0.3">
+              <p>A mobile app based on the analog organization system Bullet
+              Journal.</p>
+            </div>
+            <div style="flex:1">
+              <p>The app aims to take the systems combination of calender, to-do
+              list and notebook, and emulate it's ease of use and handy method
+              of 'Rapid Logging' in to a digital format, that doesn't adversely
+              affect the speed of using Bullet Journal, and preserves the
+              framework and it's modular system while still being
+              customisable.<p>
+            </div>
+            <div style="flex:0.5">
+              <a href="https://github.com/nathanielgreen/bulletjournal">
+                View Code
+              </a>
+            </div>
+          </section>
+        </div>
+        <div class="project-banner">
+          <h5>BULLET JOURNAL</h5>
+        </div>
     </div>
     <!-- BulletJournal End -->
   </div>
