--- a/index.html
+++ b/index.html
@@ -161,9 +161,10 @@
               of an Uber Cab with other users when their friends or colleagues 
               may not be available.</p>
             </div>
-            <div style="flex:10">
-              <p>The process of using Ushare is fast and simple, providing people a
-              quick and easy way to reduce the cost of their travel.</p>
+            <div style="flex:1">
+              <a href="https://github.com/nathanielgreen/ushare">
+                View Code
+              </a>
             </div>
           </section>
         </div>
