Added Armistice section

--- a/index.html
+++ b/index.html
@@ -56,8 +56,46 @@
     <h1>WORK PORTFOLIO</h1>
   </div>
 
-  <!-- Portfolio -->
-  <div id="portfolio" class="fadein">
+  <!-- Portfolio Top -->
+  <div id="portfolio-top">
+    <!-- Armistice -->
+    <div class="project" id="project-armisitice">
+      <label for="armistice-toggle">
+        <input class="toggle" id="armistice-toggle" type="checkbox"></input>
+        <div class="project-background" id="armistice"></div>
+          <div class="project-expand">
+            <section>
+              <div style="flex:0.8">
+                <h2>ARMISTICE</h2>
+              </div>
+              <div style="flex:1">
+                <p>A website built for DJ Armistice.</p>
+              </div>
+              <div style="flex:1">
+                <p>The website is built to provide links and
+                contact addresses for DJ Armistice, as well as showcase some 
+                of his work with links to his music and social mdeia.</p>
+              </div>
+              <div style="flex:1">
+                <a href="http://armistice.ngreen.co">
+                  View Live Website
+                </a>
+                <a href="https://github.com/nathanielgreen/armistice">
+                  View Code
+                </a>
+              </div>
+            </section>
+          </div>
+        <div class="project-banner">
+          <h5>ARMISTICE</h5>
+        </div>
+      </label>
+    </div>
+    <!-- Armistice End -->
+  </div>
+  <!-- Portfolio Top End -->
+  <!-- Portfolio Bottom -->
+  <div id="portfolio-bottom">
     <!-- Showstar -->
     <div class="project">
       <label for="showstar-toggle">
@@ -133,7 +171,7 @@
     </div>
     <!-- Brooklyn End -->
   </div>
-  <!-- Portfolio End -->
+  <!-- Portfolio Bottom End -->
 
   <div class="banner">
     <h1>PERSONAL PROJECTS</h1>
