Updating armistice link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <hr />
     <p>If you'd like to get in touch and discuss a potential project you 
     would like building, email me at 
-    <a href="mailto:work@ngreen.co">work@ngreen.co</a></p>
+    <a href="mailto:n@ngreen.co">n@ngreen.co</a></p>
   </div>
   <!-- About -->
 
@@ -77,7 +77,7 @@
                 of his work with links to his music and social mdeia.</p>
               </div>
               <div style="flex:1">
-                <a href="http://armistice.ngreen.co">
+                <a href="http://armistice.co">
                   View Live Website
                 </a>
                 <a href="https://github.com/nathanielgreen/armistice">
