Changed contact email for website

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <hr />
     <p>If you'd like to get in touch and discuss a potential project you 
     would like building, email me at 
-    <a href="mailto:n@ngreen.co">n@ngreen.co</a></p>
+    <a href="mailto:n@ngreen.co">work@ngreen.co</a></p>
   </div>
   <!-- About -->
 
