--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 
   <title>Nathaniel Green | Web Developer</title>
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" type="text/css" href="style.css">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Dosis|Noto+Sans|Raleway"
         rel="stylesheet"> 
@@ -16,6 +13,8 @@
   <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js">
   </script>
+
+  <!-- Stylesheets -->
 </head>
 <body>
   <!-- Header -->
@@ -305,6 +304,6 @@
 
 
   <!-- Scripts -->
-  <script src="scripts/fadein.js"></script>
+  <script src="scripts/scripts.js"></script>
 </body>
 </html>
