--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div style="flex:1">
                 <p>The website is built to provide links and
                 contact addresses for DJ Armistice, as well as showcase some 
-                of his work with links to his music and social mdeia.</p>
+                of his work with links to his music and social media.</p>
               </div>
               <div style="flex:1">
                 <a href="http://armistice.co">
