Added new email. Removed Twitter and work email links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <hr />
     <p>If you'd like to get in touch and discuss a potential project you 
     would like building, email me at 
-    <a href="mailto:n@ngreen.co">work@ngreen.co</a></p>
+    <a href="mailto:n@ngreen.io">n@ngreen.io</a></p>
   </div>
   <!-- About -->
 
@@ -279,17 +279,13 @@
   <!-- Contact -->
   <div id="contact" class="fadein">
     <a class="contact-link"
-      href="mailto:n@ngreen.co">Email</a>
-    <a class="contact-link"
-      href="mailto:work@ngreen.co">Business Enquiries</a>
+      href="mailto:n@ngreen.io">Email</a>
     <a class="contact-link"
       href="https://github.com/nathanielgreen/">Github</a>
     <a class="contact-link"
       href="https://github.com/nathanielgreen/CV/">CV</a>
     <a class="contact-link"
       href="https://www.linkedin.com/in/nathaniel-green-727263107">LinkedIn</a>
-    <a class="contact-link"
-      href="https://twitter.com/ngreen2303">Twitter</a>
     <a class="contact-link"
       href="https://medium.com/@nathanielgreen">Blog</a>
   </div>
