Removing projects and simplifying site

--- a/index.html
+++ b/index.html
@@ -10,289 +10,41 @@
         rel="stylesheet"> 
 
   <!-- Stylesheets -->
+  <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 </head>
 <body>
-  <!-- Header -->
-  <div id="header">
-    <div>
-      <h1>Nathaniel Green</h1>
-      <hr />
-      <h3>Web Developer based in London, UK.</h3>
+
+  <div class="container">
+    <!-- Headers -->
+    <div class="headers">
+      <h1 class="header--main">Nathaniel Green</h1>
+      <h3 class="header--small">Web Developer based in London, UK.</h3>
     </div>
-  </div>
-  <!-- Header End -->
-
-  <div class="banner">
-    <h1>ABOUT</h1>
-  </div>
-
-  <!-- About -->
-  <div id="about" class="fadein">
-    <p>Hi, I'm Nathaniel Green, a freelance web developer based in London,
-    UK.</p>
-    <p>Below you will find some of the previous work I have done, as well as some
-    personal open-source projects of mine, and my contact details.</p>
-    <hr />
-    <p>I am available to hire for short term projects, as well as being able to
-    build small, lightweight websites/apps for business or personal use. I can
-    also provide custom graphics and logos, along with the set up of custom
-    domains and email addresses.</p>
-    <hr />
-    <p>If you'd like to get in touch and discuss a potential project you 
-    would like building, email me at 
-    <a href="mailto:n@ngreen.io">n@ngreen.io</a></p>
-  </div>
-  <!-- About -->
-
-  <div class="banner">
-    <h1>WORK PORTFOLIO</h1>
-  </div>
-
-  <!-- Portfolio Top -->
-  <div id="portfolio-top">
-    <!-- Armistice -->
-    <div class="project" id="project-armisitice">
-      <label for="armistice-toggle">
-        <input class="toggle" id="armistice-toggle" type="checkbox"></input>
-        <div class="project-background" id="armistice"></div>
-          <div class="project-expand">
-            <section>
-              <div style="flex:0.8">
-                <h2>ARMISTICE</h2>
-              </div>
-              <div style="flex:1">
-                <p>A website built for DJ Armistice.</p>
-              </div>
-              <div style="flex:1">
-                <p>The website is built to provide links and
-                contact addresses for DJ Armistice, as well as showcase some 
-                of his work with links to his music and social media.</p>
-              </div>
-              <div style="flex:1">
-                <a href="http://armistice.co">
-                  View Live Website
-                </a>
-                <a href="https://github.com/nathanielgreen/armistice">
-                  View Code
-                </a>
-              </div>
-            </section>
-          </div>
-        <div class="project-banner">
-          <h5>ARMISTICE</h5>
-        </div>
-      </label>
+    <!-- Headers End -->
+    <!-- Links -->
+    <div class="links">
+        <a class="link" href="mailto:n@ngreen.io">
+          <img class="link__img" src="images/mail.svg" />
+          Mail
+        </a>
+        <a class="link" href="https://github.com/nathanielgreen/">
+          <img class="link__img" src="images/github.svg" />
+          Github
+        </a>
+        <a class="link" href="https://github.com/nathanielgreen/CV">
+          <img class="link__img" src="images/file.svg" />
+          CV
+        </a>
+        <a class="link" href="https://github.com/nathanielgreen/CV">
+          <img class="link__img" src="images/user.svg" />
+          LinkedIn
+        </a>
+        <a class="link" href="https://github.com/nathanielgreen/CV">
+          <img class="link__img" src="images/type.svg" />
+          Blog
+        </a>
     </div>
-    <!-- Armistice End -->
+    <!-- Links End -->
   </div>
-  <!-- Portfolio Top End -->
-  <!-- Portfolio Bottom -->
-  <div id="portfolio-bottom">
-    <!-- Showstar -->
-    <div class="project">
-      <label for="showstar-toggle">
-        <input class="toggle" id="showstar-toggle" type="checkbox"></input>
-        <div class="project-background" id="showstar"></div>
-        <div class="project-expand">
-          <section>
-            <div style="flex:0.8">
-              <h2>SHOWSTAR ENTERTAINMENTS</h2>
-            </div>
-            <div style="flex:0.8">
-              <p>A website built for the company 'ShowStar Entertainments'.</p>
-            </div>
-            <div style="flex:1.5">
-              <p>The website's main function is to showcase various clubs and
-              events owned by ShowStar Entertainments as well as provide
-              information and news on upcoming events and/or changes.</p>
-            </div>
-            <div style="flex:1">
-              <p> The website was built in close consultation with the client and 
-              has been built to very specific design requests.</p>
-            </div>
-            <div style="flex:1">
-              <a href="http://showstarents.co.uk">
-                View Live Website
-              </a>
-              <a href="https://github.com/nathanielgreen/showstar">
-                View Code
-              </a>
-            </div>
-          </section>
-        </div>
-        <div class="project-banner">
-          <h5>SHOWSTAR ENTERTAINMENTS</h5>
-        </div> 
-      </label>
-    </div>
-    <!-- Showstar End -->
-    <!-- Brooklyn -->
-    <div class="project">
-      <label for="brooklyn-toggle">
-        <input class="toggle" id="brooklyn-toggle" type="checkbox"></input>
-        <div class="project-background" id="brooklyn"></div>
-          <div class="project-expand">
-            <section>
-              <div style="flex:0.8">
-                <h2>THE BROOKLYN BAR</h2>
-              </div>
-              <div style="flex:0.6">
-                <p>A website built for 'The Brooklyn Bar' located in
-                Loughborough.</p>
-              </div>
-              <div style="flex:1.3">
-                <p>The website functions as a platform for 'The Brooklyn Bar' to 
-                take and manage bookings of the venue, as well as post 
-                updates and provide customers with information about the bar.</p>
-              </div>
-              <div style="flex:1">
-                <p>Built for a friend's colleague using Wordpress, along with 
-                setup of the domain and hosting packages and email accounts.</p>
-              </div>
-              <div style="flex:1">
-                <a href="http://thebrooklynbar.co.uk">
-                  View Live Website
-                </a>
-              </div>
-            </section>
-          </div>
-        <div class="project-banner">
-          <h5>THE BROOKLYN BAR</h5>
-        </div>
-      </label>
-    </div>
-    <!-- Brooklyn End -->
-  </div>
-  <!-- Portfolio Bottom End -->
-
-  <div class="banner">
-    <h1>PERSONAL PROJECTS</h1>
-  </div>
-
-  <!-- Personal Projects -->
-  <div id="projects" class="fadein">
-    <!-- Ushare -->
-    <div class="project">
-      <label for="ushare-toggle">
-        <input class="toggle" id="ushare-toggle" type="checkbox"></input>
-        <div class="project-background" id="ushare"></div>
-        <div class="project-expand">
-          <section>
-            <div style="flex:0.8">
-              <h2>USHARE</h2>
-            </div>
-            <div style="flex:1">
-              <p>Ushare is an Android & iOS app that matches users based on their
-              current geolocation and their destination, to find others around them
-              whom they can share an Uber Cab with.</p>
-            </div>
-            <div style="flex:1">
-              <p>This functionality provides users with a way to split the fare 
-              of an Uber Cab with other users when their friends or colleagues 
-              may not be available.</p>
-            </div>
-            <div style="flex:1">
-              <a href="https://github.com/nathanielgreen/ushare">
-                View Code
-              </a>
-            </div>
-          </section>
-        </div>
-        <div class="project-banner">
-          <h5>USHARE</h5>
-        </div>
-      </label>
-    </div>
-    <!-- Ushare End -->
-    <!-- RemoteMe -->
-    <div class="project">
-      <label for="remoteme-toggle">
-        <input class="toggle" id="remoteme-toggle" type="checkbox"></input>
-        <div class="project-background" id="remoteme"></div>
-        <div class="project-expand">
-          <section>
-            <div style="flex:0.8">
-              <h2>REMOTE ME</h2>
-            </div>
-            <div style="flex:1">
-              <p>Remote Me, is a web app that allows users to find, list, 
-              and rate areas in their city that are laptop-work friendly 
-              areas (such as cafes, bars & hotels).</p>
-            </div>
-            <div style="flex:0.5">
-              <p>All locations are listed on the interactive map.</p>
-            </div>
-            <div style="flex:0.5">
-              <a href="https://github.com/nathanielgreen/remoteme">
-                View Code
-              </a>
-            </div>
-          </section>
-        </div>
-        <div class="project-banner">
-          <h5>REMOTE ME</h5>
-        </div>
-      </label>
-    </div>
-    <!-- RemoteMe End -->
-    <!-- BulletJournal -->
-    <div class="project">
-      <label for="bulletjournal-toggle">
-        <input class="toggle" id="bulletjournal-toggle" type="checkbox"></input>
-        <div class="project-background" id="bulletjournal"></div>
-        <div class="project-expand">
-          <section>
-            <div style="flex:0.5">
-              <h2>BULLET JOURNAL</h2>
-            </div>
-            <div style="flex:0.3">
-              <p>A mobile app based on the analog organization system Bullet
-              Journal.</p>
-            </div>
-            <div style="flex:1">
-              <p>The app aims to take the systems combination of calender, to-do
-              list and notebook, and emulate it's ease of use and handy method
-              of 'Rapid Logging' in to a digital format, that doesn't adversely
-              affect the speed of using Bullet Journal, and preserves the
-              framework and it's modular system while still being
-              customisable.<p>
-            </div>
-            <div style="flex:0.5">
-              <a href="https://github.com/nathanielgreen/bulletjournal">
-                View Code
-              </a>
-            </div>
-          </section>
-        </div>
-        <div class="project-banner">
-          <h5>BULLET JOURNAL</h5>
-        </div>
-    </div>
-    <!-- BulletJournal End -->
-  </div>
-  <!-- Personal Projects End -->
-  
-  <div class="banner">
-    <h1>CONTACT</h1>
-  </div>
-
-  <!-- Contact -->
-  <div id="contact" class="fadein">
-    <a class="contact-link"
-      href="mailto:n@ngreen.io">Email</a>
-    <a class="contact-link"
-      href="https://github.com/nathanielgreen/">Github</a>
-    <a class="contact-link"
-      href="https://github.com/nathanielgreen/CV/">CV</a>
-    <a class="contact-link"
-      href="https://www.linkedin.com/in/nathaniel-green-727263107">LinkedIn</a>
-    <a class="contact-link"
-      href="https://medium.com/@nathanielgreen">Blog</a>
-  </div>
-  <!-- Contact End -->
-
-
-  <!-- Scripts -->
-  <script src="scripts/scripts.js"></script>
 </body>
 </html>
