Adding correct links for LinkedIn and Blog

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
           <img class="link__img" src="images/file.svg" />
           CV
         </a>
-        <a class="link" href="https://github.com/nathanielgreen/CV">
+        <a class="link"
+          href="https://www.linkedin.com/in/nathaniel-green-727263107/">
           <img class="link__img" src="images/user.svg" />
           LinkedIn
         </a>
-        <a class="link" href="https://github.com/nathanielgreen/CV">
+        <a class="link" href="https://medium.com/@nathanielgreen">
           <img class="link__img" src="images/type.svg" />
           Blog
         </a>
