Added target blank to open links in a new tab

--- a/index.html
+++ b/index.html
@@ -27,20 +27,21 @@
           <img class="link__img" src="images/mail.svg" />
           Mail
         </a>
-        <a class="link" href="https://github.com/nathanielgreen/">
+        <a class="link" target="_blank" href="https://github.com/nathanielgreen/">
           <img class="link__img" src="images/github.svg" />
           Github
         </a>
-        <a class="link" href="https://github.com/nathanielgreen/CV">
+        <a class="link" target="_blank" href="https://github.com/nathanielgreen/CV">
           <img class="link__img" src="images/file.svg" />
           CV
         </a>
         <a class="link"
+          target="_blank"
           href="https://www.linkedin.com/in/nathaniel-green-727263107/">
           <img class="link__img" src="images/user.svg" />
           LinkedIn
         </a>
-        <a class="link" href="https://medium.com/@nathanielgreen">
+        <a class="link" target="_blank" href="https://medium.com/@nathanielgreen">
           <img class="link__img" src="images/type.svg" />
           Blog
         </a>
